[package]
name = "learn-rust-publish"
version = "0.1.1"
edition = "2021"
email = "1847016090@qq.com"
description = "learn how to publish rust library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1847016090/learn-rust-publish"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
